--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@ navbar_title: Home
         {% endif %}
         {% endif %}
 
+        {% if site.data.display.homepage.show_research %}
+        {% assign research_items = site.research %}
+        {% if research_items.size > 0 %}
+        {%
+        include widgets/research_card.html
+        research=research_items
+        title='<i class="fas fa-lightbulb"></i> Research'
+        limit=site.data.display.homepage.num_research
+        %}
+        {% endif %}
+        {% endif %}
+
         {% if site.data.display.homepage.show_selected_publications %}
         {% assign pubs = site.publications | sort: "date" | reverse | where: "selected", true %}
         {%
